# sandbox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  mkdocs.yml  pyproject.toml
.cursor/rules/: conventions.mdc
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: index.md  reference.md
src/sandbox/: __init__.py  cli.py  config.py  core.py
tests/: test_cli.py  test_config.py  test_core.py  test_graduate_demote.py  test_import.py
